force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__Amount_of_Selling_Tax_Local_For__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Amount_of_Selling_Tax_Local_For__c</fullName>
    <formula>clofor_com_cfs__Total_Amount_of_Selling_Local_For__c * clofor_com_cfs__TaxRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Selling Tax(Local)-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>