force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__AttentionPriorityNumberFormu__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AttentionPriorityNumberFormu__c</fullName>
    <formula>IF(and(clofor_com_cfs__SellingListPriceLocal__c  &lt; clofor_com_cfs__ServicePricingID__r.clofor_com_cfs__SellKingakuJPY__c,  
clofor_com_cfs__SellingListPriceLocal__c &gt; clofor_com_cfs__ServicePricingID__r.clofor_com_cfs__MinSellingUnitPriceLocal__c), 1,
IF(clofor_com_cfs__SellingListPriceLocal__c &lt; clofor_com_cfs__ServicePricingID__r.clofor_com_cfs__MinSellingUnitPriceLocal__c, 2,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attention Priority(Number)-Formu</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>