force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__Buying_Amount_incl_Tax_Local_For__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Buying_Amount_incl_Tax_Local_For__c</fullName>
    <formula>clofor_com_cfs__Amount_of_Buying_Tax_Local_For__c + clofor_com_cfs__Total_Amount_of_Buying_Local_For__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buying Amount incl Tax(Local)-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>