force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__BuyingAmountinclTaxFCYFor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BuyingAmountinclTaxFCYFor__c</fullName>
    <formula>clofor_com_cfs__TotalAmountofBuyingFCYFor__c +  clofor_com_cfs__AmountofBuyingTaxFCYFor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buying Amount incl Tax(FCY)-For</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>