force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__CarrierAirlinerVendor__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CarrierAirlinerVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CARRIER/AIRLINER/VENDOR</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QUOTE LINE</relationshipLabel>
    <relationshipName>CarrierAirlinerVendor</relationshipName>
    <type>Lookup</type>
</CustomField>