force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__CarrierAirlinerVendorName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CarrierAirlinerVendorName__c</fullName>
    <label>CARRIER/AIRLINER/VENDOR NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>