force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__CurrencyConverseForBuying__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CurrencyConverseForBuying__c</fullName>
    <label>CURRENCY CONVERSION FOR BUYING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CurrencyConversion</valueSetName>
    </valueSet>
</CustomField>