force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__FxrateSelling3rdCurrencyFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FxrateSelling3rdCurrencyFCY__c</fullName>
    <label>Fxrate-Selling(3rd Currency-FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>