force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__LineItemName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LineItemName__c</fullName>
    <label>LINE ITEM NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>