force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ListPriceminusMinPriceFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ListPriceminusMinPriceFCY__c</fullName>
    <formula>clofor_com_cfs__SellingListPriceUSD__c - clofor_com_cfs__ServicePricingID__r.clofor_com_cfs__MinSellingUnitPriceUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price minus Min Price(FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>