force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__Over100kg__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Over100kg__c</fullName>
    <label>+100k</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>