force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ParentQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ParentQuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PARENT QUOTE LINE</label>
    <referenceTo>clofor_com_cfs__QuoteLine__c</referenceTo>
    <relationshipLabel>CHILD QUOTE LINE</relationshipLabel>
    <relationshipName>ParentQuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>