force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__PODAOA__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PODAOA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.D(A.O.A)</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>QUOTE LINE (P.O.D(A.O.A))</relationshipLabel>
    <relationshipName>PODAOA</relationshipName>
    <type>Lookup</type>
</CustomField>