force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__PODAOAName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PODAOAName__c</fullName>
    <label>P.O.D(A.O.A) NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>