force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__POLAOD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__POLAOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.L(A.O.D)</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>QUOTE LINE</relationshipLabel>
    <relationshipName>POLAOD</relationshipName>
    <type>Lookup</type>
</CustomField>