force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ProductBillingType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProductBillingType__c</fullName>
    <formula>text(clofor_com_cfs__ProductID__r.clofor_com_cfs__BillingType__c)</formula>
    <label>Product Billing Type</label>
    <type>Text</type>
</CustomField>