force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__Profit_NIC_Tax_FCY_For__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Profit_NIC_Tax_FCY_For__c</fullName>
    <formula>clofor_com_cfs__Total_Amount_of_Selling_FCY_For__c - clofor_com_cfs__Total_Amount_of_Buying_FCY_For__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit NIC Tax(FCY)-For</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>