force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__Profit_Ratio_INC_Tax_Local_For__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Profit_Ratio_INC_Tax_Local_For__c</fullName>
    <formula>(clofor_com_cfs__Selling_Amount_incl_Tax_Local_For__c - clofor_com_cfs__Buying_Amount_incl_Tax_Local_For__c) / clofor_com_cfs__Selling_Amount_incl_Tax_Local_For__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Ratio INC Tax(Local)%-For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>