force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ProfitNICTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitNICTaxLocal__c</fullName>
    <formula>clofor_com_cfs__TotalAmountSellingLocal__c - clofor_com_cfs__TotalAmountBuyingLocal__c</formula>
    <label>PROFIT NIC TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>