force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ProfitNICTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitNICTaxUSD__c</fullName>
    <formula>clofor_com_cfs__TotalAmountOfSellingUSD__c - clofor_com_cfs__TotalAmountOfBuyingUSD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PROFIT NIC TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>