force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ProfitRatioInclTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitRatioInclTaxLocal__c</fullName>
    <formula>(clofor_com_cfs__SellingAmountInclTaxLocal__c - clofor_com_cfs__BuyingAmountInclTaxLocal__c)/clofor_com_cfs__SellingAmountInclTaxLocal__c</formula>
    <label>PROFIT RATIO INCL TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>