force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ProfitRatioInclTaxUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitRatioInclTaxUSD__c</fullName>
    <formula>(clofor_com_cfs__SellingAmountInclTaxUSD__c - clofor_com_cfs__BuyingAmountInclTaxUSD__c)/clofor_com_cfs__SellingAmountInclTaxUSD__c</formula>
    <label>PROFIT RATIO INCL TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>