force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__ProfitRatioNICTax3rdCurrency__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ProfitRatioNICTax3rdCurrency__c</fullName>
    <formula>(clofor_com_cfs__TotalAmountofSelling3rdCurrency__c - clofor_com_cfs__TotalAmountofBuying3rdCurrency__c)/clofor_com_cfs__TotalAmountofSelling3rdCurrency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Ratio NIC Tax(3rd Currency)%</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>