force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__QUOTE_LINE_Summary__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QUOTE_LINE_Summary__c</fullName>
    <formula>Name  +&apos; | &apos;+ clofor_com_cfs__ServicePricingID__r.Name +&apos; | &apos;+  TEXT(clofor_com_cfs__ServicePricingID__r.clofor_com_cfs__SellAmountUSD__c) +&apos; USD | &apos;+ 	TEXT(clofor_com_cfs__ServicePricingID__r.clofor_com_cfs__SellKingakuJPY__c)  +&apos; &apos;+  $Setup.clofor_com_cfs__Site_Custom_Settings__c.clofor_com_cfs__Local_Currency__c+ &apos; | &apos;+  TEXT(clofor_com_cfs__Quantity__c)  +&apos; | &apos;+  clofor_com_cfs__ChargeUnitInPrint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QUOTE LINE Summary</label>
    <type>Text</type>
</CustomField>