force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__QuoteID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QuoteID__c</fullName>
    <label>QUOTE ID</label>
    <referenceTo>clofor_com_cfs__Quote__c</referenceTo>
    <relationshipLabel>QUOTE LINE</relationshipLabel>
    <relationshipName>QuoteLine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>