force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__QuoteLineNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__QuoteLineNumber__c</fullName>
    <label>QUOTE LINE NUMBER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>