force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__RequesterCompany__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RequesterCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QUOTE LINE(REQUESTER COMPANY)</relationshipLabel>
    <relationshipName>QuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>