force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__RollupSvcSellingUnitPriceUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RollupSvcSellingUnitPriceUSD__c</fullName>
    <label>ROLLUP SVC SELLING UNIT PRICE(USD)</label>
    <summarizedField>clofor_com_cfs__ProdSvcPricingQuoteLine__c.clofor_com_cfs__SvcSellingUnitPriceUSD__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__ProdSvcPricingQuoteLine__c.clofor_com_cfs__QuoteLineID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>