force-app/main/default/objects/clofor_com_cfs__QuoteLine__c/fields/clofor_com_cfs__Route__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>clofor_com_cfs__RouteQuote__c</referenceTo>
    <relationshipLabel>Quote Line</relationshipLabel>
    <relationshipName>Route_Quote</relationshipName>
    <type>Lookup</type>
</CustomField>